# alb

./: .bazelrc  .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  BUILD.bazel  FULL_README.md  MODULE.bazel  README.md  WORKSPACE.bazel  config.yaml  setup_netif_ebpf.sh  traffic-stats.csv
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: config.yaml
scripts/: download_llama_model.sh  verify_llama_model.sh
src/: BUILD.bazel  Makefile  main.c  main.cpp  strategy_loader.cpp  strategy_loader.hpp  test_build.sh  test_eal_init.sh  test_strategy_reload.sh
strategies/: current_weights.json
test/: .gitignore  README.md  bind_ports.sh  config-4port.yaml  plot_metrics.py  run_4port_test.sh  run_alb_bench.sh  run_test.sh  send_udp.py  unbind_ports.sh
test/results/example-test/: caps_schedule.json  latency.jsonl  snapshot.json  snapshots.jsonl  start_time.txt  tx-stats.csv
test/results/example-test/llm_trace/: cycle0001_a1.prompt.txt  cycle0001_a1.response.cpp  cycle0001_a2.prompt.txt  cycle0001_a2.response.cpp  cycle0002_a1.prompt.txt  cycle0002_a1.response.cpp  cycle0002_a2.prompt.txt  cycle0002_a2.response.cpp  cycle0003_a1.prompt.txt  cycle0003_a1.response.cpp  cycle0003_a2.prompt.txt  cycle0003_a2.response.cpp  cycle0004_a1.prompt.txt  cycle0004_a1.response.cpp  cycle0004_a2.prompt.txt  cycle0004_a2.response.cpp  cycle0005_a1.prompt.txt  cycle0005_a1.response.cpp  cycle0005_a2.prompt.txt  cycle0005_a2.response.cpp  cycle0006_a1.prompt.txt  cycle0006_a1.response.cpp  cycle0006_a2.prompt.txt  cycle0006_a2.response.cpp  cycle0007_a1.prompt.txt  cycle0007_a1.response.cpp  cycle0007_a2.prompt.txt  cycle0007_a2.response.cpp  cycle0008_a1.prompt.txt  cycle0008_a1.response.cpp  cycle0009_a1.prompt.txt  cycle0009_a1.response.cpp  cycle0009_a2.prompt.txt  cycle0009_a2.response.cpp  cycle0009_a3.prompt.txt  cycle0009_a3.response.cpp  cycle0010_a1.prompt.txt  cycle0010_a1.response.cpp  cycle0010_a2.prompt.txt  cycle0010_a2.response.cpp  (+36 more)
