# Root BUILD file required by Bazel
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src:alb": "",
        "//packages/config:config": "",
        "//packages/balancer-strategies:strategy": "",
        "//packages/traffic-generator:traffic-generator": "",
    },
)
