module(
    name = "alb",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
