load("@dpdk//:cflags.bzl", "DPDK_COPTS")

LINUX_ONLY = ["@platforms//os:linux"]

cc_binary(
    name = "alb",
    srcs = [
        "main.cpp",
        "strategy_loader.cpp",
        "strategy_loader.hpp",
    ],
    copts = DPDK_COPTS + [
        "-O3",
        "-DALLOW_EXPERIMENTAL_API",
    ],
    linkopts = ["-ldl"],
    target_compatible_with = LINUX_ONLY,
    visibility = ["//visibility:public"],
    deps = [
        "//packages/balancer-strategies:strategy",
        "//packages/config",
        "//packages/version-table",
        "@dpdk",
    ],
)

sh_test(
    name = "alb_build_test",
    srcs = ["test_build.sh"],
    data = [":alb"],
    env = {"BINARY": "$(rootpath :alb)"},
    tags = ["ci"],
    target_compatible_with = LINUX_ONLY,
)

sh_test(
    name = "alb_strategy_reload_test",
    size = "small",
    srcs = ["test_strategy_reload.sh"],
    data = [
        ":alb",
        "//packages/balancer-strategies:libteststrategy.so",
        "//packages/balancer-strategies:libweightedstrategy.so",
    ],
    env = {
        "BINARY": "$(rootpath :alb)",
        "RR_LIB": "$(rootpath //packages/balancer-strategies:libteststrategy.so)",
        "WEIGHTED_LIB": "$(rootpath //packages/balancer-strategies:libweightedstrategy.so)",
    },
    tags = [
        "ci",
        "no-sandbox",
    ],
    target_compatible_with = LINUX_ONLY,
)

sh_test(
    name = "alb_eal_init_test",
    size = "small",
    srcs = ["test_eal_init.sh"],
    data = [":alb"],
    env = {"BINARY": "$(rootpath :alb)"},
    tags = [
        "ci",
        "no-sandbox",
    ],
    target_compatible_with = LINUX_ONLY,
)
